# mindstream-notes

./: .gitignore  .npmrc  .prettierignore  .prettierrc.json  CONTRIBUTING.md  README.md  codecov.yml  commitlint.config.cjs  package-lock.json  package.json  playwright.backend.config.ts  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: launch.json  settings.local.json
.config/: lint-staged.config.cjs
.config/commitlint/: commitlint.config.cjs
.config/prettier/: .prettierignore  .prettierrc.json
.config/vitest/stubs/: app-navigation.ts
.github/workflows/: release.yml  test.yml
.husky/: commit-msg  pre-commit  pre-push
backend/: .env.example  .env.test  README.md  docker-compose.override.yml  docker-compose.test-min.yml  docker-compose.test.yml  docker-compose.yml
backend/docs/: advanced.md
backend/excalidraw-room/: Dockerfile
backend/nginx/: Dockerfile  nginx.conf
backend/scripts/: test-stack.mjs
backend/yjs-collab/: Dockerfile  collab-server.mjs  docker-compose.yml
backend/yjs-relay/: collab-server.mjs
crates/ink-core/: Cargo.toml
crates/ink-core/src/: input.rs  lib.rs  page.rs  strokes_doc.rs
crates/ink-core/src/ui/: brush.rs  color_picker.rs  mod.rs  theme.rs  toolbar.rs
crates/ink-egui-web/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
crates/ink-egui-web/src/: lib.rs
docs/: BUILDING.md  architecture.md  e2e-flows.md  e2e-strategy.md  hotkeys-roadmap.md  known-limitations.md  security-review.md
docs/e2e/: backend-stack.md  flows.md  harness.md  status.md  strategy.md
docs/native-egui-layer/: 01-audit.md  02-roadmap.md  03-shared-ink-core.md  04-measurement.md  REPLACEMENT_PLAN.md
e2e/: note-history.spec.ts  notes.spec.ts
e2e-app/: README.md  tsconfig.json  wdio.conf.ts
e2e-app/helpers/: backend.ts  harness.ts
e2e-app/specs/: backup.e2e.ts  editor-roundtrip.e2e.ts  history.e2e.ts  settings-persist.e2e.ts  sync-history.e2e.ts  trash-retention.e2e.ts
e2e-backend/: backend-health.spec.ts
e2e-tests/: README.md
e2e-tests/app/: README.md  tsconfig.json  wdio.conf.ts  wdio.multiremote.a2.conf.ts  wdio.multiremote.conf.ts
e2e-tests/app/helpers/: accounts.ts  backend.ts  harness.ts  preflight.ts
e2e-tests/app/specs/: backup.e2e.ts  collab-confirm.e2e.ts  collab.e2e.ts  editor-roundtrip.e2e.ts  history.e2e.ts  seed-merge.e2e.ts  settings-persist.e2e.ts  sharing-multi-device.e2e.ts  sharing.e2e.ts  sync-history.e2e.ts  trash-retention.e2e.ts
e2e-tests/backend/: backend-health.spec.ts  collab-relay-auth.spec.ts  collab-room.ts  edge-hardening.spec.ts  global-setup.ts  playwright.config.ts
e2e-tests/browser/: editor-roundtrip.spec.ts  editor-view-modes.spec.ts  kanban.spec.ts  markdown-roundtrip.spec.ts  mobile-editor-stability.spec.ts  note-history.spec.ts  search.spec.ts  share-dialog.spec.ts  source-plugins.spec.ts  tree-lifecycle.spec.ts  tree-operations.spec.ts
e2e-tests/shared/: backend-target.ts
e2e/app/: README.md  wdio.conf.ts  wdio.multiremote.a2.conf.ts  wdio.multiremote.conf.ts
e2e/app/helpers/: accounts.ts  backend.ts  harness.ts
e2e/app/specs/: backup.e2e.ts  collab-confirm.e2e.ts  collab.e2e.ts  history.e2e.ts  (+7 more)
e2e/backend/: backend-health.spec.ts  playwright.config.ts
e2e/browser/: app.spec.ts  notes.spec.ts  playwright.config.ts  tree-lifecycle.spec.ts
scripts/: collab-server.mjs  format-web.mjs
src/: app.css  app.html  hooks.client.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  package.json  pnpm-lock.yaml  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/infoplist/de.lproj/: InfoPlist.strings
src-tauri/infoplist/en.lproj/: InfoPlist.strings
src-tauri/scripts/: build-ink-web.mjs  format-rust.mjs  format-web.mjs  measure-ink-replacement.mjs  rust-coverage.mjs  setup-android-cargo.mjs  tauri.mjs
src-tauri/src/: app_events.rs  app_restart.rs  backup.rs  collab_events.rs  content_stats.rs  data.rs  desktop_settings.rs  error.rs  hotkeys.rs  i18n.rs  lib.rs  main.rs  native_menu.rs  notes_export.rs  paths.rs  pdf_export.rs  pdf_text.rs  profiles.rs  serde_helpers.rs  sharing.rs  system.rs  tray.rs  tree_batch.rs  window.rs
src-tauri/src/assets/: mod.rs  tests.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/backup/: export.rs  merge.rs  mod.rs  restore.rs  staging.rs  tests.rs
src-tauri/src/collections/: mod.rs  tests.rs
src-tauri/src/data/: tests.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/drawing/: collab.rs  input.rs  jni.rs  line.wgsl  mod.rs  page.rs  pipeline.rs  render.rs  save_worker.rs  stroke_modeler.rs  strokes_doc.rs  surface.rs  surface_source.rs
src-tauri/src/drawing/platform/: android.rs  desktop.rs  mod.rs
src-tauri/src/drawing/ui/: brush.rs  color_picker.rs  mod.rs  theme.rs  toolbar.rs
src-tauri/src/history/: mod.rs  tests.rs
src-tauri/src/notes/: mod.rs  tests.rs
src-tauri/src/profiles/: tests.rs
src-tauri/src/search/: mod.rs
src-tauri/src/sharing/: bundles.rs  incoming.rs  invite.rs  local_state.rs  members.rs  mod.rs  revoke.rs  scope.rs  tests.rs  types.rs
src-tauri/src/signatures/: mod.rs
src-tauri/src/sync/: collab_room.rs  collections.rs  local_rows.rs  mod.rs  payloads.rs  pull.rs  push.rs  repair.rs  scheduler.rs  scopes.rs  tags_crdt.rs  tests.rs  yrs_doc.rs
src-tauri/src/sync/apply/: assets.rs  folders.rs  mod.rs  notes.rs  signatures.rs
src-tauri/src/sync/scopes/: tests.rs
src-tauri/src/sync/tests/: apply_folders.rs  apply_notes.rs  collab_room.rs  collections.rs  fixtures.rs
src-tauri/src/tree_batch/: tests.rs
src/lib/: date-time.test.ts  date-time.ts  mocks.ts  native-menu-commands.test.ts  native-menu-commands.ts  native-menu.svelte.ts  platform.test.ts  platform.ts  preferences.test.ts  preferences.ts  reduce-motion.svelte.test.ts  reduce-motion.svelte.ts  sort.test.ts  sort.ts  state.svelte.test.ts  state.svelte.ts  tauri.ts  utils.test.ts  utils.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
test/stubs/: app-navigation.ts
(+465 files in other folders)
