[package]
name = "mindstream-notes"
version = "0.1.8"
description = "Local-first modern markdown-based E2EE collaborative note-taking app"
authors = ["Jannik Gohr"]
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jannikgohr/mindstream-notes"

[lib]
name = "mindstream_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["unstable", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
urlencoding = "2"

# Persistence
rusqlite = { version = "0.39.0", features = ["bundled"] }
thiserror = "2.0.18"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
etebase = { git = "https://github.com/jannikgohr/etebase-rs", features = ["networking"] }

# Keyring — v4 architecture: the API lives in keyring-core, and each
# OS backend is its own crate. Pulling them in via target.cfg blocks
# below keeps mobile builds (which can't link the desktop secret-
# service / windows-native deps) clean. set_default_store() is wired
# from run() in this file so the right store is registered before any
# auth code touches an Entry.
keyring-core = "1"

# Sync — yrs CRDT for offline-merge-safe documents, similar for diffing
# the editor's "full body" save back into Y.Text ops, rmp-serde for the
# msgpack wire format inside Etebase item content.
yrs = "0.26"
similar = "3"
rmp-serde = "1"
serde_bytes = "0.11"
tokio = { version = "1.52.3", features = ["time", "sync"] }

# raw-window-handle lives at the top level (rather than buried under
# the android-only deps with wgpu) because `drawing::surface_source`
# defines the cross-platform `SurfaceSource` trait in terms of
# `HasWindowHandle` + `HasDisplayHandle`. It's a small types-only
# crate — no runtime cost, no link-time growth — and putting it
# here lets the trait file compile on host so cargo test can sanity
# check the abstraction without an Android target.
raw-window-handle = "0.6"

# D1 stroke smoothing — flxzt's pure-Rust port of Google's
# ink-stroke-modeler (wobble smoothing + spring-mass position model
# + upsampling). Used inside the Pen branch of the render thread;
# the modeler eats raw samples and emits a smoothed stream that gets
# tessellated + persisted instead. Originally the audit flagged a
# cxx cross-compile risk because Google's reference impl is C++ —
# this port avoids that entirely (single dep: thiserror), which is
# what made it safe to pick. Battle-tested: same crate rnote uses.
# Promoted to top-level (rather than the android-only block below)
# so `drawing/stroke_modeler.rs` is host-testable, matching the
# convention input.rs / page.rs follow.
ink-stroke-modeler-rs = "0.1"

# ---- Native "ink" drawing layer (Android + desktop) ----
# The render/pipeline/ui modules are shared by Android's SurfaceView
# bridge and the first desktop native-window bridge. Platform-only
# glue (JNI/NDK on Android, tao/wry event hooks on desktop) stays in
# cfg-specific dependency blocks below.
ink-core = { path = "../crates/ink-core" }
wgpu = "27"
egui = "0.33"
egui-wgpu = "0.33"
egui-shadcn = "0.3.1"
lucide-icons = "0.555"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2.10.1"
# Desktop ink notes follow the wry_plugin event-loop pattern from
# clearlysid/tauri-plugin-egui: Tauri owns the native window, while
# the plugin sees tao mouse/scroll/resize events and forwards them
# into our existing render thread.
tauri-runtime = "2.11"
tauri-runtime-wry = "2.11"

# ---- keyring v4 platform backends ----
# Each crate's Store::new() returns Result<Arc<Self>>, which coerces
# into the Arc<dyn CredentialStoreApi + Send + Sync> that
# keyring_core::set_default_store accepts.

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain", "protected"] }

[target.'cfg(target_os = "ios")'.dependencies]
# iOS only exposes the protected-data store. The `keychain` feature is
# silently ignored there, so don't bother enabling it.
apple-native-keyring-store = { version = "1", features = ["protected"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
# Matches the v3 `sync-secret-service` feature we were using before.
# crypto-rust avoids pulling in OpenSSL on Linux; vendored keeps the
# dbus link static so the binary doesn't grow a runtime dep on the
# distro's libdbus.
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust", "vendored"] }

[target.'cfg(target_os = "android")'.dependencies]
# Requires ndk-context to be initialised from Java before any Store
# is created — see Keyring.kt + MainActivity.onCreate in
# src-tauri/gen/android/app/...
android-native-keyring-store = "1"

# `log` is just a facade — without a concrete backend, every
# `log::info!` / `log::warn!` call silently no-ops. android_logger
# routes Rust logs into logcat under a configurable tag so the
# `[drawing.perf]` / `[drawing]` lines actually surface. Only
# needed on Android; desktop targets get whatever backend the
# Tauri plugins set up (or none, which is fine for now).
android_logger = "0.14"

# (wgpu/egui/bytemuck/pollster/lucide live in top-level dependencies
# so the same drawing core compiles on desktop as well as Android.)
# ndk gives us ANativeWindow_fromSurface(env, jsurface) — the bridge
# between the Java Surface and the raw pointer wgpu's create_surface
# needs. ndk-sys is the raw FFI; ndk is the higher-level wrapper —
# we hold the pointer ourselves but use the ndk crate's symbol
# definitions for type compatibility with raw-window-handle.
ndk = "0.9"
ndk-sys = "0.6"
# ndk-context is already initialised process-wide by Keyring.initializeNdkContext
# in MainActivity.onCreate (see Keyring.kt). We pull it in explicitly
# so the drawing JNI code can fetch the JavaVM for callbacks back into
# Kotlin (show/hide) without having to also depend on the keyring crate.
ndk-context = "0.1"
jni = "0.21"
# libc here only to read CLOCK_MONOTONIC directly via clock_gettime.
# `MotionEvent.eventTime` on Android is `SystemClock.uptimeMillis()`,
# which is CLOCK_MONOTONIC under the hood — so subtracting our own
# CLOCK_MONOTONIC reading from a sample's eventTime gives us the
# sample's age in real wallclock ms. std::time::Instant *is* the
# same clock on Android but exposes only deltas, not absolute
# values, so it can't be subtracted from a foreign eventTime
# directly. Used by drawing::platform::android::now_uptime_ms and
# the [drawing.perf.lag] instrumentation in render.rs.
libc = "0.2"
