[package]
name = "mindstream-notes"
version = "0.1.9"
description = "Local-first modern markdown-based E2EE collaborative note-taking app"
authors = ["Jannik Gohr"]
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jannikgohr/mindstream-notes"

[lib]
name = "mindstream_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["unstable", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
urlencoding = "2"

# Persistence
rusqlite = { version = "0.39.0", features = ["bundled"] }
thiserror = "2.0.18"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
etebase = { git = "https://github.com/jannikgohr/etebase-rs", features = ["networking"] }

# Keyring — v4 architecture: the API lives in keyring-core, and each
# OS backend is its own crate. Pulling them in via target.cfg blocks
# below keeps mobile builds (which can't link the desktop secret-
# service / windows-native deps) clean. set_default_store() is wired
# from run() in this file so the right store is registered before any
# auth code touches an Entry.
keyring-core = "1"

# Sync — yrs CRDT for offline-merge-safe documents, similar for diffing
# the editor's "full body" save back into Y.Text ops, rmp-serde for the
# msgpack wire format inside Etebase item content.
yrs = "0.26"
similar = "3"
rmp-serde = "1"
serde_bytes = "0.11"
tokio = { version = "1.52.3", features = ["time", "sync"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2.10.1"
# `log` facade backend for desktop. Routes log::info!/warn!/error! to
# stdout (visible under `cargo tauri dev`) and to a rotating file in
# the OS-specific app log dir, so sync warnings like the corrupt-
# remote-item recovery path actually surface for diagnosis. Android
# stays on android_logger (logcat).
tauri-plugin-log = "2"

# ---- keyring v4 platform backends ----
# Each crate's Store::new() returns Result<Arc<Self>>, which coerces
# into the Arc<dyn CredentialStoreApi + Send + Sync> that
# keyring_core::set_default_store accepts.

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain", "protected"] }

[target.'cfg(target_os = "ios")'.dependencies]
# iOS only exposes the protected-data store. The `keychain` feature is
# silently ignored there, so don't bother enabling it.
apple-native-keyring-store = { version = "1", features = ["protected"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
# Matches the v3 `sync-secret-service` feature we were using before.
# crypto-rust avoids pulling in OpenSSL on Linux; vendored keeps the
# dbus link static so the binary doesn't grow a runtime dep on the
# distro's libdbus.
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust", "vendored"] }

[target.'cfg(target_os = "android")'.dependencies]
# Requires ndk-context to be initialised from Java before any Store
# is created — see Keyring.kt + MainActivity.onCreate in
# src-tauri/gen/android/app/...
android-native-keyring-store = "1"

# `log` is just a facade — without a concrete backend, every
# `log::info!` / `log::warn!` call silently no-ops. android_logger
# routes Rust logs into logcat under a configurable tag so the
# `[drawing.perf]` / `[drawing]` lines actually surface. Only
# needed on Android; desktop targets get whatever backend the
# Tauri plugins set up (or none, which is fine for now).
android_logger = "0.14"

# ndk-context is already initialised process-wide by Keyring.initializeNdkContext
# in MainActivity.onCreate (see Keyring.kt). We pull it in explicitly
# so the drawing JNI code can fetch the JavaVM for callbacks back into
# Kotlin (show/hide) without having to also depend on the keyring crate.
ndk-context = "0.1"
jni = "0.21"
