[package]
name = "ink-egui-web"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.33"
ink-core = { path = "../ink-core" }
js-sys = "0.3"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
